examples/test/testpolicy16897.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16897
  namespace: namespace314
spec:
  podSelector:
    matchLabels:
      key45: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value13
          key11: value39
      podSelector:
        matchLabels:
          key43: value20
          key28: value27
